# TAP

./: .gitignore  CLAUDE.md  README.MD  pyproject.toml
docs/: notes.md  tmr_g1_improvement_plan.md  tmr_g1_model_card.md  tmr_g1_plan.md
kinematic_planner/: NOTES_g1_rep_v1.md  build_features.py  build_text_index.py  compute_stats.py  eval_mdm.py  g1_data.py  g1_dataset.py  g1_rep_v1.py  render_samples.py  render_samples_kimodo.py  render_samples_mpl.py  sample_g1.py  test_roundtrip.py  train_g1.py  train_g1_rep_v1.sbatch
scripts/: bones_seed_to_qpos.py  build_eval_subset.py  build_eval_text_cache.py  build_g1_text_emb_cache.py  build_g1_text_emb_cache.sbatch  build_gt_motion_lib.py  build_gt_motion_lib.sbatch  build_text_emb_cache.py  compare_metrics.py  eval_joints_tmr_footskate.py  eval_sonic_set.sbatch  extract_bones_seed.sbatch  find_corrupt_npz.py  finetune_sonic_dummy.sbatch  g1_check_all_consistency.py  g1_check_all_consistency.sbatch  g1_check_unified_consistency.py  g1_csv_to_20fps_npz.py  g1_csv_to_unified_npz.py  g1_csv_to_unified_npz.sbatch  g1_npz_mj_to_kimodo.py  g1_npz_mj_to_kimodo.sbatch  g1_resample_20fps.sbatch  gmt_smoke.py  inference_gmt.sbatch  inference_sonic.sh  kimodo_csv_to_bones_seed.py  kimodo_gen_batched.sbatch  kimodo_gen_subset.sbatch  precompute_g1_features.py  precompute_g1_features.sbatch  render_compare.py  render_compare.sbatch  render_g1_qpos.py  run_kimodo_batched.py  run_kimodo_for_subset.py  shard_subset.py  train_tmr_g1.sbatch  train_tmr_g1_v10.sbatch  train_tmr_g1_v11.sbatch  (+11 more)
tmr_g1/: __init__.py  eval_retrieval.py
(+17 files in other folders)
